@@ -1,4 +1,7 @@
 # 2024/02/25
+- Added /aqo save command
+
+# 2024/02/25
 - implement cures maybe
 - some spell updates
 - some manual casting fixes
